--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1931,7 +1931,7 @@ textarea.form-control {
 
 .container > .navbar-collapse {
 	width: 100%;
-	background-color: #333333;
+	background-color: #f5af0080;
 	margin-right: 0;
 	margin-left: 0;
 }
