--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1660,7 +1660,7 @@ textarea.form-control {
 }
 
 .header-transparent {
-	background-color: transparent;
+	background-color: #fff;
 }
 
 .header-transparent + .mtop-100,
@@ -1736,7 +1736,7 @@ textarea.form-control {
 	text-transform: uppercase;
 	font-weight: 400;
 	line-height: 100px;
-	color: #ffffff;
+	color: #333333;
 	padding: 0;
 	letter-spacing: 0.48px;
 }
@@ -1932,7 +1932,7 @@ textarea.form-control {
 
 .container > .navbar-collapse {
 	width: 100%;
-	background-color: #f5af0080;
+	background-color: #1e1e1e;
 	margin-right: 0;
 	margin-left: 0;
 }
