--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 .wrapper {
-	background-color: #f8f8f8;
+	background-color: #fff;
 }
 
 * {
@@ -1682,6 +1682,7 @@ textarea.form-control {
 	border-radius: 0;
 	min-height: 100px;
 	border: none;
+	background-color: #ffffff87;
 }
 
 .header .navbar.affix {
